--- a/index.html
+++ b/index.html
@@ -3,126 +3,261 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Git & DevOps Portfolio</title>
+  <title>⚙️ DevOps Futuristic Portfolio</title>
   <style>
+    :root {
+      --primary: #38bdf8;
+      --bg: #0f0c29;
+      --gradient: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      --card-bg: rgba(255,255,255,0.05);
+      --border: rgba(255,255,255,0.1);
+      --text: #e2e8f0;
+      --shadow: 0 0 20px #0ea5e9;
+    }
+
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
     }
+
     body {
-      background: #0f172a;
-      color: #e2e8f0;
+      background: var(--gradient);
+      color: var(--text);
       line-height: 1.6;
-      padding: 20px;
+      overflow-x: hidden;
+      animation: fadeIn 1.5s ease;
+      padding: 0 10px;
     }
+
     header {
       text-align: center;
-      margin-bottom: 30px;
+      padding: 60px 20px 30px;
     }
+
     header h1 {
-      font-size: 2.5em;
-      color: #38bdf8;
+      font-size: 3rem;
+      color: var(--primary);
+      text-shadow: 0 0 15px var(--primary);
     }
+
     header p {
-      font-size: 1.2em;
+      font-size: 1.2rem;
       color: #94a3b8;
+      margin-top: 10px;
     }
-    section {
-      margin: 20px 0;
-      padding: 20px;
-      border-radius: 10px;
-      background: #1e293b;
+
+    .section {
+      max-width: 1100px;
+      margin: 30px auto;
+      background: var(--card-bg);
+      border: 1px solid var(--border);
+      border-radius: 15px;
+      padding: 30px;
+      backdrop-filter: blur(10px);
+      animation: slideUp 1.3s ease;
     }
+
     h2 {
       color: #facc15;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      border-bottom: 2px solid #facc15;
+      padding-bottom: 5px;
+      font-size: 1.6rem;
     }
+
+    p, li, code {
+      font-size: 1rem;
+    }
+
     ul {
-      list-style: square;
+      list-style: none;
       padding-left: 20px;
     }
-    .btn {
-      background: #38bdf8;
-      color: #0f172a;
-      padding: 10px 20px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s ease;
+
+    li::before {
+      content: '🔹';
+      margin-right: 8px;
+      color: var(--primary);
     }
+
+    code {
+      background: #1e293b;
+      padding: 4px 8px;
+      border-radius: 6px;
+      display: inline-block;
+      margin: 5px 0;
+      color: var(--primary);
+    }
+
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 15px;
+      margin-top: 15px;
+    }
+
+    .skill {
+      background: #1e293b;
+      border-radius: 10px;
+      padding: 12px;
+      text-align: center;
+      box-shadow: var(--shadow);
+      transition: transform 0.3s ease;
+    }
+
+    .skill:hover {
+      transform: scale(1.05);
+    }
+
+    .btn {
+      display: inline-block;
+      background: var(--primary);
+      color: #0f172a;
+      padding: 12px 24px;
+      margin-top: 20px;
+      font-weight: bold;
+      border-radius: 8px;
+      cursor: pointer;
+      border: none;
+      transition: all 0.3s ease;
+    }
+
     .btn:hover {
       background: #0ea5e9;
+      color: #fff;
     }
+
     footer {
       text-align: center;
-      padding: 15px;
+      padding: 30px 10px;
       color: #94a3b8;
-      margin-top: 30px;
+      font-size: 0.9rem;
     }
-    code {
-      background: #334155;
-      padding: 4px 6px;
-      border-radius: 5px;
-      font-size: 0.95em;
+
+    a {
+      color: #60a5fa;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: scale(0.97);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2.2rem;
+      }
+      h2 {
+        font-size: 1.3rem;
+      }
+      .btn {
+        width: 100%;
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>🚀 Git & DevOps Portfolio</h1>
-    <p>Version Control | Branching | Token Auth | CI/CD Basics</p>
+    <h1>⚙️ DevOps Futuristic Portfolio</h1>
+    <p>Frontend • Backend • DevOps • Cloud</p>
   </header>
 
-  <section>
-    <h2>👨‍💻 About Me</h2>
-    <p>I am a passionate DevOps learner skilled in Git, GitHub, and automation workflows. I create efficient CI/CD pipelines and practice Git operations using branches and tokens for security.</p>
-  </section>
+  <div class="section">
+    <h2>🚀 About Me</h2>
+    <p>I am a DevOps-Driven Full-Stack Developer skilled in building dynamic apps and deploying them using modern pipelines on the cloud. Passionate about clean code, continuous learning, and scalable architecture.</p>
+  </div>
 
-  <section>
-    <h2>🔑 Personal Access Token Usage</h2>
-    <p>To push code securely to GitHub:</p>
-    <ul>
-      <li>Go to GitHub Settings → Developer Settings → Tokens</li>
-      <li>Generate a new token with repo access</li>
-      <li>Use it like this:</li>
-    </ul>
-    <code>https://yourusername:yourtoken@github.com/yourrepo.git</code>
-  </section>
+  <div class="section">
+    <h2>💻 Front-End Skills</h2>
+    <div class="skills-grid">
+      <div class="skill">HTML5</div>
+      <div class="skill">CSS3 / SCSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">ReactJS</div>
+      <div class="skill">Tailwind CSS</div>
+    </div>
+  </div>
 
-  <section>
-    <h2>🌿 Branch Merging Task</h2>
-    <p>To create and merge branches:</p>
-    <ul>
-      <li><code>git checkout -b feature-branch</code> – create branch</li>
-      <li><code>git add .</code> & <code>git commit -m "your msg"</code></li>
-      <li><code>git push origin feature-branch</code></li>
-      <li>Open PR or use <code>git merge</code> in main branch</li>
-    </ul>
-  </section>
+  <div class="section">
+    <h2>🧠 Back-End & Database</h2>
+    <div class="skills-grid">
+      <div class="skill">Python</div>
+      <div class="skill">Flask</div>
+      <div class="skill">MySQL</div>
+      <div class="skill">Firebase</div>
+      <div class="skill">REST APIs</div>
+    </div>
+  </div>
 
-  <section>
-    <h2>⚙️ Basic CI/CD Flow (Concept)</h2>
-    <ul>
-      <li>Push to GitHub triggers GitHub Actions</li>
-      <li>Run test/build/deploy steps</li>
-      <li>Deploy to staging or production</li>
-    </ul>
-    <button class="btn" onclick="alert('Coming soon: CI/CD demo')">Demo Pipeline</button>
-  </section>
+  <div class="section">
+    <h2>☁️ DevOps & Cloud</h2>
+    <div class="skills-grid">
+      <div class="skill">Git & GitHub</div>
+      <div class="skill">Linux</div>
+      <div class="skill">AWS (EC2, S3)</div>
+      <div class="skill">CI/CD Pipelines</div>
+      <div class="skill">Docker</div>
+    </div>
+  </div>
 
-  <section>
-    <h2>📂 My Repositories</h2>
+  <div class="section">
+    <h2>🔐 Token Authentication</h2>
+    <p>For secure push to GitHub with token:</p>
+    <code>https://username:TOKEN@github.com/your/repo.git</code>
+  </div>
+
+  <div class="section">
+    <h2>🌿 Git Branch Workflow</h2>
     <ul>
-      <li><a href="https://github.com/yourusername/devops-token-task" target="_blank" style="color:#60a5fa">Token Auth Task Repo</a></li>
-      <li><a href="https://github.com/yourusername/git-branch-merge-task" target="_blank" style="color:#60a5fa">Branch Merge Task Repo</a></li>
+      <li><code>git checkout -b feature-xyz</code></li>
+      <li><code>git add . && git commit -m "Add feature"</code></li>
+      <li><code>git push origin feature-xyz</code></li>
+      <li><code>git checkout main && git merge feature-xyz</code></li>
     </ul>
-  </section>
+  </div>
+
+  <div class="section">
+    <h2>⚙️ CI/CD Pipeline</h2>
+    <p>GitHub Actions → Test → Deploy (Firebase/AWS)</p>
+    <button class="btn" onclick="alert('✅ CI/CD Pipeline Simulated!')">Run Demo</button>
+  </div>
+
+  <div class="section">
+    <h2>📂 Featured Repositories</h2>
+    <ul>
+      <li><a href="https://github.com/yourusername/devops-task" target="_blank">🔗 DevOps Token/CI Task</a></li>
+      <li><a href="https://github.com/yourusername/fullstack-app" target="_blank">🔗 FullStack App (Python + MySQL)</a></li>
+    </ul>
+  </div>
 
   <footer>
-    &copy; 2025 K LOKESH | Built with ❤️  DevOps
+    &copy; 2025 K LOKESH | Built with 💙 by a DevOps Engineer
   </footer>
 
 </body>
