DevOps.Portfolio.Updated

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 <body>
 
   <header>
-    <h1>⚙️ DevOps Futuristic Portfolio</h1>
-    <p>Frontend • Backend • DevOps • Cloud</p>
+	<h1>⚙️ DevOps Futuristic Portfolio⚙️ </h1>
+	 <p>Frontend • Backend • DevOps • Cloud</p>
   </header>
 
   <div class="section">
